--- a/index.html
+++ b/index.html
@@ -1,27 +1,46 @@
+<!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | UX Designer | Product Designer | Projects </title>
-
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, UX Designer, Designer, Architecture, Architect, UC Berkeley">
+  <meta name="title" content="Vicky W. | UX Designer | Projects">
+  <title>Vicky W. | UX Designer | Projects </title>
+  <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
 
-
-
+  <meta name="keywords"
+    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer | Product Designer" />
+  <meta property='og:title' content="Vicky Wang | UX Designer" />
   <meta property='og:description'
     content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me/project" />
+  <meta property='og:url' content="https://vickywang.me" />
   <meta property="og:site_name" content="Vicky's Website">
+
+
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:type" content="image/jpeg">
+  <!-- linkedin -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@vickyw_design" />
+  <meta name="twitter:title" content="Vicky's Website" />
+  <meta name="twitter:description"
+    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta name="twitter:url" content="//vickywang.me/">
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <!-- twitter -->
+
+
+
 
 
   <link rel="stylesheet" href="./main.css">
