--- a/about/index.html
+++ b/about/index.html
@@ -1,53 +1,26 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-  <title>Vicky W. | product designer | UX/UI designer | About</title>
-
-  <meta name="title" content="">
-
-  <meta name="description"
-    content="Vicky Wang is a product designer | UX/UI designer, with an architecture background. She loves to design products that people love and make them easier to use.">
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
+  <meta name="title" content="Vicky W. | UX designer | About">
+  <title>Vicky W. | UX designer | About</title>
   <link rel="canonical" href="https://vickywang.me/">
+  <meta name="author" content="Vicky W.">
 
-  <script type="application/ld+json">
-    {"@context":"https://schema.org",
-    "@graph":[{"@type":"WebSite","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me/",
-    "name":"Vicky Wang","description":"UX/UI Designer | Product Designer",
-    "potentialAction":[{"@type":"SearchAction",
-    "target":{"@type":"EntryPoint","urlTemplate":"https://vickywang.me/?s={search_term_string}"},
-    "query-input":"required name=search_term_string"}],"inLanguage":"en-US"},
-    {"@type":"CollectionPage","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me","name":"Vicky Wang | User Experience Designer | UX Design",
-    "isPartOf":{"@id":"https://vickywang.me/#website"},
-    "description":"Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)",
-    "breadcrumb":{"@id":"https://vickywang.me/#breadcrumb"},
-    "inLanguage":"en-US","potentialAction":[{"@type":"ReadAction",
-    "target":["https://vickywang.me/"]}]},{"@type":"BreadcrumbList","@id":"https://vickywang.me/#breadcrumb",
-    "itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]}]} </script>
-
+  <meta name="keywords" content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang is a product designer specializing in UI/UX design" />
+  <meta property='og:title' content="Vicky Wang | UX Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I am a UI/UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+    content='Hi! Thanks for stopping by. I am a UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
   <meta property='og:url' content="https://vickywang.me/" />
-  <meta property="og:site_name" content="Vicky Wang's Website">
-
-
-
-
+  <meta property="og:site_name" content="Vicky's Website">
 
 
   <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
@@ -57,7 +30,7 @@
   <!-- linkedin -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky Wang's Website" />
+  <meta name="twitter:title" content="Vicky's Website" />
   <meta name="twitter:description"
     content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
   <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
