--- a/navigationV3/index.html
+++ b/navigationV3/index.html
@@ -303,46 +303,43 @@
     <div class="blankHS"></div>
 
 
-    <nav class="HorizNav">
-      <ol class="HorizNavItem">
 
-        <li><a href="#c1" class="outline">Content 1</a></li>
-        <P class="lineHorizAll"></P>
-        <li><a href="#c2" class="outline">Content 2</a></li>
-        <P class="lineHorizAll"></P>
-
-        <li><a href="#c3" class="outline">Content 3</a></li>
-      </ol>
-    </nav>
-
-    <section id="c1" class="wrapper">
+    <div class="wrapper">
       <div class="Grid Grid--gutters Grid--1of6">
         <div class="Grid-cell">
           <nav class="subNav element">
             <ol>
-              <li><a href="#c1Sc1" class="newTitlePanel">C1 - SC 1</a>
+              <li><a href="#content1" class="newTitlePanel">Content 1</a>
                 <ul>
-                  <li class="newPanel"><a href="#c1Sc11">Title 1 </a></li>
-                  <li class="newPanel"><a href="#c1Sc12">Title 2 </a></li>
+                  <li class="newPanelV3"><a href="#content11">C1 - SC 1</a></li>
+                  <li class="newPanelV3"><a href="#content12">C1 - SC 2</a></li>
                 </ul>
               </li>
-              <li><a href="#c1Sc2" class="newTitlePanel">C1 - SC 2</a>
+              <li><a href="#content2" class="newTitlePanel">Content 2</a>
                 <ul>
-                  <li class="newPanel"><a href="#c1Sc21">Title 1 </a></li>
-                  <li class="newPanel"><a href="#c1Sc22">Title 2</a></li>
+                  <li class="newPanelV3"><a href="#content21">C2 - SC 1</a></li>
+                  <li class="newPanelV3"><a href="#content22">C2 - SC 2</a></li>
                 </ul>
               </li>
+
+              <li><a href="#content3" class="newTitlePanel">Content 3</a>
+                <ul>
+                  <li class="newPanelV3"><a href="#content31"> C3 - SC 1 </a></li>
+                  <li class="newPanelV3"><a href="#content32">C3 - SC 2</a></li>
+                </ul>
+              </li>
+
             </ol>
           </nav>
         </div>
         <div class="Grid-cell">
-          <section id="c1Sc1">
-            <section id="c1Sc11">
+          <section id="content1">
+            <section id="content11">
               <!-- Title -->
 
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>C1 - SC 1</span><img class="moveUpDown widthLogo"
+                  <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
                       src="../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
@@ -351,7 +348,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -365,19 +362,12 @@
               </div>
               <!-- Img -->
             </section>
-            <section id="c1Sc12">
-              <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-                <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>C1 - SC 2</span><img class="moveUpDown widthLogo"
-                      src="../icon/icon_research.svg" alt="Research">
-                  </h1>
-                </div>
-              </div>
-              <!-- Title -->
+            <section id="content12">
+
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -396,13 +386,14 @@
 
             </section>
           </section>
-          <section id="c1Sc2">
-            <section id="c1Sc21">
+
+          <section id="content2">
+            <section id="content21">
               <!-- Title -->
 
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>C1 - SC 1</span><img class="moveUpDown widthLogo"
+                  <h1 class="Grid Grid--center"> <span>Content 2</span><img class="moveUpDown widthLogo"
                       src="../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
@@ -411,7 +402,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C2 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -425,10 +416,34 @@
               </div>
               <!-- Img -->
             </section>
-            <section id="c1Sc22">
+            <section id="content22">
+
+              <!-- Title -->
+              <!-- Arrow -->
+              <div class="wrapper">
+                <div class="element">
+                  <h2 class="tArrow">C2 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                </div>
+              </div>
+              <!-- Arrow -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
+            </section>
+          </section>
+          <section id="content3">
+            <section id="content31">
+              <!-- Title -->
+
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>C1 - SC 2</span><img class="moveUpDown widthLogo"
+                  <h1 class="Grid Grid--center"> <span>Content 3</span><img class="moveUpDown widthLogo"
                       src="../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
@@ -437,7 +452,25 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C3 - SC 1<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                </div>
+              </div>
+              <!-- Arrow -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
+            </section>
+            <section id="content32">
+               <!-- Arrow -->
+              <div class="wrapper">
+                <div class="element">
+                  <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -454,275 +487,18 @@
           </section>
         </div>
 
+
+
+
       </div>
-    </section>
+    </div>
 
 
 
 
-    <section id="c2">
-      <section id="contentOne" class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of6">
-          <div class="Grid-cell">
-
-            <nav class="subNav element">
-              <ol>
-                <li><a href="#c2Sc1" class="newTitlePanel">C2 - SC 1</a>
-                  <ul>
-                    <li class="newPanel"><a href="#c2Sc11">Title 1 </a></li>
-                    <li class="newPanel"><a href="#c2Sc12">Title 2 </a></li>
-                  </ul>
-                </li>
-                <li><a href="#c2Sc2" class="newTitlePanel">C2 - SC 2</a>
-                  <ul>
-                    <li class="newPanel"><a href="#c2Sc21">Title 1 </a></li>
-                    <li class="newPanel"><a href="#c2Sc22">Title 2</a></li>
-                  </ul>
-                </li>
-              </ol>
-            </nav>
-          </div>
-          <div class="Grid-cell">
-            <section id="c2Sc1">
-              <section id="c2Sc11">
-                <!-- Arrow -->
-                <div class="wrapper">
-                  <div class="element">
-                    <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                  </div>
-                </div>
-                <!-- Arrow -->
-                <div class="Grid Grid--full wrapper">
-                  <div class="Grid-cell">
-                    <div class="">
-                      <div class="element Grey100Bg leftVerLine ">
-                        <h4>
-                          <p> <strong>Title </strong></p>
-                          <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                              incididunt ut labore
-                              et dolore magna aliqua. </li>
-                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                              ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                              eu
-                              fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                              officia
-                              deserunt
-                              mollit anim id est laborum.</li>
-                          </ul>
-                          <p> <strong>Title </strong></p>
-                          <ul>
-                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                              ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                              eu
-                              fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                              officia
-                              deserunt
-                              mollit anim id est laborum.</li>
-                          </ul>
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="blankHM"></div>
-              </section>
-              <section id="c2Sc12">
-
-                <!-- Arrow -->
-                <div class="wrapper">
-                  <div class="element">
-                    <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                  </div>
-                </div>
-                <!-- Arrow -->
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="element">
-                      <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      </p>
-
-                    </div>
-                  </div>
-                </div>
-                <div class="blankHM"></div>
-              </section>
-            </section>
-            <section id="c2Sc2">
-              <section id="c2Sc21">
-                <!-- Arrow -->
-                <div class="wrapper">
-                  <div class="element">
-                    <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                  </div>
-                </div>
-                <!-- Arrow -->
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="element">
-                      <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      </p>
-
-                    </div>
-                  </div>
-                </div>
-                <div class="blankHM"></div>
-              </section>
-              <section id="c2Sc22">
-                <!-- Arrow -->
-                <div class="wrapper">
-                  <div class="element">
-                    <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                  </div>
-                </div>
-                <div class="Grid Grid--gutters Grid--cols-2">
-                  <div class="Grid-cell">
-                    <div class="element">
-                      <div class="elementInnerL cardAPPOINTA">
-                        <h4> <strong> Title</strong> </h4>
-                        <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt
-                            ut labore
-                            et
-                            dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt
-                            ut labore
-                            et
-                            dolore magna aliqua. </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="element">
-                      <div class="elementInnerL cardAPPOINTA">
-                        <h4> <strong> Title</strong> </h4>
-                        <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt
-                            ut labore
-                            et
-                            dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt
-                            ut labore
-                            et
-                            dolore magna aliqua. </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </section>
-              <div class="blankHS"></div>
-
-            </section>
-          </div>
-        </div>
-
-      </section>
-    </section>
-
-    <section id="c3" class="colorBgGrey">
-      <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Title</span><img class="moveUpDown widthLogo"
-              src="../icon/icon_research.svg" alt="Research">
-          </h1>
-        </div>
-      </div>
-
-      <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-              </h5>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="Grid-cell BGappointa">
-          <div class="element">
-            <div class="elementInnerL">
-
-              <h4><strong>Title</strong></h4>
-              <h5>&#8226; List </h5>
-              <h5>&#8226; List </h5>
-            </div>
-          </div>
-        </div>
-      </div>
 
 
-      <!-- Arrow -->
 
-      <div class="blankHS"></div>
-
-      <div class="blankHS"></div>
-
-      <div class="blankHS"></div>
-    </section>
 
   </main>
 
