--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For website case study &#64; vickywang.me </h5>
-                      <h3 class="arrCard"><strong>NAVIGATION SYSTEM</strong></h3>
+                      <h3 class="arrCard"><strong>NAVIGATION DESIGN</strong></h3>
                       <h4>Developing a more structured and logical navigation system for displaying case studies
                       </h4>
                     </div>
