--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -195,7 +195,7 @@
   </header>
 
   <!-- header -->
-  <mai>
+  <main>
 
     <div class="blankHM"></div>
     <!--intro-->
@@ -499,7 +499,7 @@
       </div>
     </button>
     <!--back to top-->
-  </mai>
+  </main>
 
   <!--footer-->
   <footer class="Grey100Bg">
