--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="title" content="Vicky W. | UX Designer | Navigation">
+  <meta name="title" content="Vicky W. | UX Designer | Navigation V3">
   <title>Vicky W. | UX Designer | Navigation </title>
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
@@ -40,9 +40,9 @@
   <!-- twitter -->
 
 
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
+  <link rel="stylesheet" href="../../main.css">
+  <script type="text/javascript" src="../../scripts.js"></script>
+  <script type="text/javascript" src="../../scripts_project.js"></script>
 
 
 
@@ -149,7 +149,9 @@
 
 
     <div class="backgroundColorNav ">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW
+      
+      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight widthLogo"
+        src="../../icon/arrow-back.svg" alt="Go back"><h5>BACK</h5> 
       </a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -158,7 +160,7 @@
 
               <a target="_blank" href="/glorify/">
                 <div class="cardBorder GLORIFY">
-                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
+                  <img src="../../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <h6 class="colorBlack">GLORIFY | Daily worship</h6>
                   </div>
@@ -166,7 +168,7 @@
               </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <img src="../../image/Cover_SEER.jpg" alt="SEER">
                   <div class="element">
                     <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
@@ -175,7 +177,7 @@
 
               <a href="/design_system/">
                 <div class="cardBorder ">
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
                     <h6 class="colorBlack">Design System | vickywang.me</h6>
                   </div>
@@ -209,8 +211,8 @@
         <img src="Mockup.png" alt="vickywang.me">
 
         <div class="ProjectBannerInnerND">
-          <h1 class=""><strong>Navigation design</strong> </h1>
-          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+          <h1 class=""><strong>Navigation design V3</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down and click to view the behavior</h3>
           <div class="blankHXS"></div>
 
         </div>
@@ -220,8 +222,8 @@
         <div class="blankMin1880"></div>
         <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
-          <h1 class=""><strong>Navigation design</strong> </h1>
-          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+          <h1 class=""><strong>Navigation design V3</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down and click to view the behavior</h3>
           <div class="blankHXS"></div>
 
 
@@ -231,8 +233,8 @@
         <div class="blankMin1880"></div>
         <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
-          <h1 class=""><strong>Navigation Design</strong> </h1>
-          <h3 class="Grid Grid--center colorBlack">Please scroll down to view the behavior</h3>
+          <h1 class=""><strong>Navigation design V3</strong> </h1>
+          <h3 class="Grid Grid--center colorBlack">Please scroll down and click to view the behavior</h3>
           <div class="blankHXS"></div>
 
         </div>
@@ -340,7 +342,7 @@
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
                   <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
-                      src="../icon/icon_research.svg" alt="Research">
+                      src="../../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
               </div>
@@ -348,7 +350,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -356,7 +358,7 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
@@ -367,7 +369,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -394,7 +396,7 @@
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
                   <h1 class="Grid Grid--center"> <span>Content 2</span><img class="moveUpDown widthLogo"
-                      src="../icon/icon_research.svg" alt="Research">
+                      src="../../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
               </div>
@@ -402,7 +404,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C2 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C2 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -410,7 +412,7 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
@@ -422,7 +424,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C2 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C2 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -430,7 +432,7 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
@@ -444,7 +446,7 @@
               <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
                 <div class="Grid-cell">
                   <h1 class="Grid Grid--center"> <span>Content 3</span><img class="moveUpDown widthLogo"
-                      src="../icon/icon_research.svg" alt="Research">
+                      src="../../icon/icon_research.svg" alt="Research">
                   </h1>
                 </div>
               </div>
@@ -452,7 +454,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C3 - SC 1<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C3 - SC 1<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -460,7 +462,7 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
@@ -470,7 +472,7 @@
                <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -478,7 +480,7 @@
 
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
