--- a/navigation/index.html
+++ b/navigation/index.html
@@ -321,13 +321,11 @@
             <a href="/navigation/V1/">
               <div class="">
                 <div class="elementCard float cardBorder shadowBoxLt">
-                  <img src="../image/Cover_portfolioWeb.svg" alt="vickywang.me">
+                  <img src="../image/Cover_NavigationV1.svg" alt="vickywang.me/navigation/V1">
                   <div class="element">
-                    <div class="element">
-                      <h3 class="arrCard"><strong>Version 1</strong></h3>
-                      <h4>The main goal of the initial version was to improve the readability, scannability,
-                        scrollability, and skippability of the UX case study projects.</h4>
-                    </div>
+                    <h3 class="arrCard"><strong>Version 1</strong></h3>
+                    <h4>The main goal of the initial version was to improve the readability, scannability,
+                      scrollability, and skippability of the UX case study projects.</h4>
                   </div>
                 </div>
               </div>
@@ -339,13 +337,11 @@
             <a href="/navigation/V2/">
               <div class="">
                 <div class="elementCard float cardBorder shadowBoxLt">
-                  <img src="../image/Cover_portfolioWeb.svg" alt="vickywang.me">
+                  <img src="../image/Cover_NavigationV2.svg" alt="vickywang.me/navigation/V2">
                   <div class="element">
-                    <div class="element">
-                      <h3 class="arrCard"><strong>Version 2</strong></h3>
-                      <h4>After receiving feedback and conducting testing, the goal for the iteration was to streamline
-                        the content and ensure that users can find what they're looking for with minimal effort.</h4>
-                    </div>
+                    <h3 class="arrCard"><strong>Version 2</strong></h3>
+                    <h4>After receiving feedback and conducting testing, the goal for the iteration was to streamline
+                      the content and ensure that users can find what they're looking for with minimal effort.</h4>
                   </div>
                 </div>
               </div>
@@ -356,14 +352,12 @@
           <div class="element">
             <a href="/navigation/V3/">
               <div class="elementCard float cardBorder shadowBoxLt">
-                <img src="../image/Cover_portfolioWeb.svg" alt="vickywang.me">
+                <img src="../image/Cover_NavigationV3.svg" alt="vickywang.me/navigation/V3">
                 <div class="element">
-                  <div class="element">
-                    <h3 class="arrCard"><strong>Version 3</strong></h3>
-                    <!--Analysis Report-->
-                    <h4>After conducting additional usability testing, I have refined the method of displaying content
-                      in a single location, which is more organized and avoids the need for a lengthy list.</h4>
-                  </div>
+                  <h3 class="arrCard"><strong>Version 3</strong></h3>
+                  <!--Analysis Report-->
+                  <h4>After conducting additional usability testing, I have refined the method of displaying content
+                    in a single location, which is more organized and avoids the need for a lengthy list.</h4>
                 </div>
               </div>
             </a>
