--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="title" content="Vicky W. | UX Designer | Navigation V3">
+  <meta name="title" content="Vicky W. | UX Designer | Navigation V1">
   <title>Vicky W. | UX Designer | Navigation V1 </title>
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
@@ -247,8 +247,8 @@
       <div class="element">
 
         <h3><strong>Main goal</strong></h3>
-        <h4>The goal of this navigation update is to present the design thinking process in a clear and logical
-          manner.
+        <h4>The main goal of the initial version was to improve the readability, scannability,
+          scrollability, and skippability of the UX case study projects.
         </h4>
       </div>
     </div>
@@ -273,7 +273,7 @@
       <div class="element">
 
         <h3><strong>Duration</strong></h3>
-        <h4>April 2023 </h4>
+        <h4>December 2022 </h4>
         <h4>5 Hours </h4>
 
       </div>
@@ -290,7 +290,7 @@
 
         <h3><strong>Role</strong></h3>
         <h4>Design</h4>
-        <h4>implement</h4>
+        <h4>Implement</h4>
       </div>
     </div>
     <div class="Grid-cell">
