--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -246,8 +246,8 @@
         <div class="element">
 
           <h3><strong>Main goal</strong></h3>
-          <h4>The goal of this navigation update is to present the design thinking process in a clear and logical
-            manner.
+          <h4>After receiving feedback and conducting testing, the goal for the iteration was to streamline
+            the content and ensure that users can find what they're looking for with minimal effort.
           </h4>
         </div>
       </div>
