--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -245,8 +245,8 @@
         <div class="element">
 
           <h3><strong>Main goal</strong></h3>
-          <h4>The goal of this navigation update is to present the design thinking process in a clear and logical
-            manner.
+          <h4>After conducting additional usability testing, I have refined the method of displaying content
+            in a single location, which is more organized and avoids the need for a lengthy list.
           </h4>
         </div>
       </div>
@@ -272,7 +272,7 @@
 
           <h3><strong>Duration</strong></h3>
           <h4>April 2023 </h4>
-          <h4>5 Hours </h4>
+          <h4>3 Hours </h4>
 
         </div>
       </div>
@@ -379,7 +379,6 @@
                       elit, sed
                       do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
-
                   </div>
                 </div>
               </div>
